cmake_minimum_required(VERSION 3.8)

if(MSVC)
	add_subdirectory("Library.Win32")
else()
	add_subdirectory("Library.Linux")
endif()

add_subdirectory("Lesson1_1")
add_subdirectory("Lesson1_2")
add_subdirectory("Lesson1_3")
add_subdirectory("Lesson3_1")
add_subdirectory("Lesson3_2")
add_subdirectory("Lesson3_3")
add_subdirectory("Lesson4_1")
add_subdirectory("Lesson4_2")
add_subdirectory("Lesson4_3")
add_subdirectory("Lesson5_1")
add_subdirectory("Lesson5_2")
add_subdirectory("Lesson5_3")
add_subdirectory("Lesson5_4")
add_subdirectory("Lesson5_5")
add_subdirectory("Lesson6_1")
add_subdirectory("Lesson6_2")
add_subdirectory("Lesson6_3")
add_subdirectory("Lesson6_4")
